[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/Dashboard/Dashboard.gd" type="Script" id=1]
[ext_resource path="res://ui/Badges/UnlockedBadges.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=4]

[sub_resource type="GDScript" id=4]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 5 )
shader_param/value = 1.0
script = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="InputEventKey" id=10]
scancode = 16777217

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 10 )

[node name="Dashboard" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UnlockedBadges" parent="." instance=ExtResource( 2 )]
margin_left = 1.0
margin_top = 65.0
margin_right = 1277.0
margin_bottom = 291.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 1280, 50 )
color = Color( 0.533333, 0.427451, 0.572549, 1 )

[node name="Label" type="Label" parent="VBoxContainer/ColorRect"]
margin_top = 6.0
margin_right = 1280.0
margin_bottom = 42.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "Dashboard"
align = 1

[node name="QuitButton" type="Button" parent="."]
material = SubResource( 11 )
margin_left = 1221.0
margin_top = 2.0
margin_right = 1269.0
margin_bottom = 50.0
rect_scale = Vector2( 1, 1.00458 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
shortcut = SubResource( 17 )
icon = ExtResource( 4 )
icon_align = 1

[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
